--- a/HKHPICTURES/HOMAX/static/gallery.css
+++ b/HKHPICTURES/HOMAX/static/gallery.css
@@ -1,4 +1,4 @@
-/* Set the background color */
+
 body {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -6,12 +6,12 @@ body {
   background-color: rgb(206, 206, 206);
 }
 
-/* Position the nav bar at the top */
+
 .nav-container {
   position: sticky;
   top: 0;
   z-index: 1000;
-  background-color: #333; /* Match the background color of the nav */
+  background-color: #333; 
 }
 
 .nav {
@@ -25,7 +25,7 @@ body {
   font-family: Copperplate, Papyrus, fantasy;
 }
 
-/* Set the size of the carousel container */
+
 .carousel-container {
   display: flex;
   justify-content: center;
@@ -39,10 +39,10 @@ body {
   height: 42%;
 }
 
-/* Add some additional styling to carousel images */
+
 .carousel img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  border-radius: 10%; /* Add border-radius to the carousel images */
+  border-radius: 10%; 
 }
