--- a/HKHPICTURES/HOMAX/static/styles.css
+++ b/HKHPICTURES/HOMAX/static/styles.css
@@ -5,13 +5,13 @@ body {
   padding: 0;
 }
 
-/* Add a new rule for the nav container */
+
 .nav-container {
   position: sticky;
   top: 0;
   z-index: 1000;
   background-color: #333;
-  /* Match the background color of the nav */
+  
 }
 
 /* Navigation */
@@ -29,34 +29,23 @@ body {
 /* Home page */
 .cover-image {
   position: fixed;
-  /* Changed from relative to fixed */
   top: 0;
-  /* Add top and left properties */
   left: 0;
   width: 100%;
-  /* Changed width to 100% */
   height: 100vh;
-  /* Changed height to 100vh */
   object-fit: cover;
-  /* Changed from 'contain' to 'cover' */
   z-index: -1;
-  /* Position the cover image behind the other content */
+ 
 }
 
 .cover-text {
   position: absolute;
   top: 38%;
-  /* Position the text in the center vertically */
   left: 13%;
-  /* Position the text in the center horizontally */
   transform: translate(-50%, -50%);
-  /* Offset the text position to be centered */
   color: #ffffff;
-  /* Set the text color */
   font-size: 3rem;
-  /* Set the text size */
   text-align: center;
-  /* Center the text */
   font-family: Copperplate, Papyrus, fantasy;
 }
 
@@ -72,14 +61,12 @@ body {
 }
 
 .nav a:hover {
-  /* Change the navbar content color to red on hover */
   color: rgb(255, 255, 255);
 }
 
 .nav .active {
   font-weight: bold;
   background-color: #333;
-  /* Change background color to black */
 }
 
 /* About page */
@@ -98,15 +85,15 @@ body {
   flex-direction: column;
   align-items: center;
 }
-/* Add a new rule for the about image */
+
 .about-image {
-  position: fixed; /* Changed from relative to fixed */
-  top: 0; /* Add top and left properties */
+  position: fixed; 
+  top: 0; 
   left: 0;
-  width: 100%; /* Changed width to 100% */
-  height: 100vh; /* Changed height to 100vh */
-  object-fit: cover; /* Changed from 'contain' to 'cover' */
-  z-index: -1; /* Position the cover image behind the other content */
+  width: 100%; 
+  height: 100vh; 
+  object-fit: cover; 
+  z-index: -1; 
 }
 .about h2 {
 
@@ -116,12 +103,12 @@ body {
 }
 .about p {
   font-family: Copperplate, Papyrus, fantasy ;
-  border: 2px solid #ffffff; /* Change the border width and color as needed */
-  padding: 35px; /* Add some padding inside the border */
-  margin: 10px auto; /* Add some margin outside the border and center the element horizontally */
-  box-sizing: border-box; /* Include the border and padding in the element's total width and height */
-  width: 100%; /* Set the width to 100% of the parent container */
-  max-width: 500px; /* Set a maximum width to wrap the paragraph */
+  border: 2px solid #ffffff; 
+  padding: 35px; 
+  margin: 10px auto; 
+  box-sizing: border-box; 
+  width: 100%; 
+  max-width: 500px; 
   display: block;
   border-radius: 4%;
   color: white;
@@ -132,26 +119,20 @@ body {
   background-color: rgb(206, 206, 206);
 }
 
-/* Container for the three sections */
+
 .sections-container {
   display: flex;
   justify-content: space-around;
   margin: 20px 0;
 }
 
-/* Individual section styles */
 .section {
   border: 2px solid #000;
-  /* Set the border width and color */
   padding: 15px;
-  /* Add some padding inside the border */
   box-sizing: border-box;
-  /* Include the border and padding in the element's total width and height */
   width: calc(100% / 3 - 20px);
-  /* Calculate the width for each section */
 }
 
-/* Responsive styles for smaller screens */
 @media screen and (max-width: 768px) {
   .sections-container {
     flex-direction: column;
@@ -204,7 +185,6 @@ button[type="submit"] {
   color: #333;
 }
 
-/* Style the booking section */
 .booking {
   max-width: 800px;
   margin: 0 auto;
